assets/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-static-svc
  namespace: example-project
  labels:
    app: fastapi-static-app
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fastapi-static-app
  sessionAffinity: None
  type: ClusterIP
