assets/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: fastapi-static-route
  namespace: example-project
spec:
  to:
    kind: Service
    name: fastapi-static-svc
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
